src/test/deca/context/valid/class/valid_field_extend_class.deca
// Description:
//    Test of a class declaration with fields and extend
//    Test rule 1.3
//
// Result:
//      All good ! :D
//
// History:
//    created on 09/01/2025

class Dummy {
    int a = 5;
    float b = 5.0;
    boolean c = true;
}

class Dummy2 extends Dummy {
    int d = 5;
    float e = 5.0;
    boolean f = true;
}

{
    println("All good ! :D");
}
